fixed broken deploy links, increased spacing between icons

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -60,6 +60,7 @@ a {
   padding-left: 5%;
   .code-container {
     display: flex;
+    padding-bottom: 1.5em;
     p {
       padding-left: 3em;
       padding-right: 1.5em;
